--- a/fast/src/components/Form/form.module.css
+++ b/fast/src/components/Form/form.module.css
@@ -4,3 +4,11 @@
 .email-input:focus {
   box-shadow: none;
 }
+
+.site-header-form {
+  background: #ffffff;
+  border: 1px solid #88d20f;
+  box-sizing: border-box;
+  box-shadow: 0px 2px 14px rgba(0, 0, 0, 0.1);
+  border-radius: 4px 4px 0px 0px;
+}
