--- a/fast/src/pages/home/home.module.css
+++ b/fast/src/pages/home/home.module.css
@@ -1,17 +1,33 @@
+.one-click {
+  font-size: 24px;
+  line-height: 29px;
+  letter-spacing: 0.01em;
+  
+}
 .everywhere-fast {
-  width: 469px;
+  font-size: 14px;
+  line-height: 22px;
 
-  font-family: TT Norms;
-  font-size: 30px;
-  line-height: 25px;
-  color: #3d3d3d;
+  letter-spacing: 0.01em;
+  margin: 17px 0 22px;
 }
 
-.one-click {
-  font-family: Muli;
-  font-style: normal;
-  font-weight: 800;
-  font-size: 50px;
-  line-height: 80px;
-  color: #2b4403;
+@media (min-width: 576px) {
+  .one-click {
+    font-family: Muli;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 50px;
+    line-height: 80px;
+    color: #2b4403;
+  }
+
+  .everywhere-fast {
+    width: 469px;
+
+    font-family: TT Norms;
+    font-size: 30px;
+    line-height: 25px;
+    color: #3d3d3d;
+  }
 }
